--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 <li><p>Slide source code</p>
 
 <ul>
-<li><a href="https://github.com/my-coursera-training/gh_pages/dp-app">gh_pages branch</a></li>
+<li><a href="https://github.com/my-coursera-training/dp-app/tree/gh-pages">gh-pages branch</a></li>
 </ul></li>
 <li><p>Application code</p>
 
 <ul>
-<li><a href="https://github.com/my-coursera-training/master/dp-app/app/ui.R">ui.R</a></li>
-<li><a href="https://github.com/my-coursera-training/master/dp-app/app/server.R">server.R</a></li>
+<li><a href="https://github.com/my-coursera-training/dp-app/blob/master/app/ui.R">ui.R</a></li>
+<li><a href="https://github.com/my-coursera-training/dp-app/blob/master/app/server.R">server.R</a></li>
 </ul></li>
 </ul>
 
