--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
 
 <slide class="" id="slide-3" style="background:;">
   <hgroup>
+    <h2>Difference between model parameters</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>The plot for some posible configurations of model parameters are shown below:</p>
+
+<p><img src="assets/fig/unnamed-chunk-1-1.png" alt="plot of chunk unnamed-chunk-1"></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-4" style="background:;">
+  <hgroup>
     <h2>Application Access and source code</h2>
   </hgroup>
   <article data-timings="">
@@ -144,8 +157,14 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Application Access and source code'>
+        data-slide=3 title='Difference between model parameters'>
          3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Application Access and source code'>
+         4
       </a>
     </li>
   </ul>
